--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "moment": "^2.30.1",
